plugins {
    id 'java'
    id 'groovy'
    id 'org.springframework.boot' version '3.1.0'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'numble.deepdive'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // MVC
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    // H2
    runtimeOnly 'com.h2database:h2'

    // p6spy
    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.8.1'

    // MySQL JDBC
    implementation 'mysql:mysql-connector-java:8.0.33'

    // for BCryptPasswordEncoder in Spring Security
    implementation 'org.springframework.security:spring-security-crypto:6.1.0'

    // JJWT
    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'

    // Spring Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    // Spock Test
//    testImplementation 'org.spockframework:spock-core:2.3-groovy-4.0'
//    testImplementation 'org.codehaus.groovy:groovy-all:3.0.16'
//    testImplementation 'org.spockframework:spock-spring:2.3-groovy-4.0'

    // Rest Assured Test
    testImplementation 'io.rest-assured:rest-assured:5.3.1'
}

tasks.named('test') {
    useJUnitPlatform()
}
